<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/Lightpurple2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearHead"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            tools:src="@android:color/darker_gray"
            android:padding="8dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/linearHead"
        android:id="@+id/linearNameNickname">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            android:id="@+id/tv_item_nickname"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="user name"
            android:textSize="14sp"
            android:gravity="center"
            android:id="@+id/tv_item_name"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/background2"
            android:id="@+id/cardViewLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textColor="@color/Lightpurple2"
                        android:layout_marginBottom="4dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="888"
                        android:textStyle="bold"
                        android:textColor="@color/Lightpurple2"
                        android:textSize="16sp"
                        android:id="@+id/tv_count_following"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repository"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textColor="@color/Lightpurple2"
                        android:layout_marginBottom="4dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="888"
                        android:textStyle="bold"
                        android:textColor="@color/Lightpurple2"
                        android:textSize="16sp"
                        android:id="@+id/tv_count_repo"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textColor="@color/Lightpurple2"
                        android:layout_marginBottom="4dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="888"
                        android:textStyle="bold"
                        android:textColor="@color/Lightpurple2"
                        android:textSize="16sp"
                        android:id="@+id/tv_count_follower"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearHead"
        android:orientation="vertical"
        android:id="@+id/linearLocationCompany">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="14sp"
                    android:layout_marginRight="23dp"
                    android:drawableLeft="@drawable/ic_baseline_location_on_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Tes"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_item_location"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="14sp"
                    android:layout_marginRight="18dp"
                    android:drawableLeft="@drawable/ic_baseline_work_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Tes"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_item_company"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:layout_marginRight="42dp"
                    android:drawableLeft="@drawable/ic_baseline_email_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Tes"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_item_email"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textSize="14sp"
                    android:layout_marginRight="26dp"
                    android:drawableLeft="@drawable/ic_baseline_web_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Tes"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_item_website"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_below="@id/linearLocationCompany">
        <com.google.android.material.appbar.AppBarLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tv_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:text="@string/follower1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <com.google.android.material.tabs.TabItem
                    android:text="@string/following1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/tv_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressbar2"
        android:visibility="visible"/>
</RelativeLayout>